# pdfchatboat

./: .env  .gitignore  app.py  main.py  pyproject.toml  requirements.txt
Vector/: chroma.sqlite3
static/: script.js  style.css
templates/: index.html
